--- a/src/blogdevweb/static/css/style.css
+++ b/src/blogdevweb/static/css/style.css
@@ -3,6 +3,14 @@ body {
     font-family: 'Spartan', sans-serif;
     font-weight: 400;
 }
+/*
+.content {
+    border:3px solid;
+    border-color: #800080;
+    border-radius: 20px;
+    padding: 10%;
+    background: #f8f8f8;
+}*/
 
 h2 {
     color: #800080;
@@ -12,13 +20,31 @@ h2 {
     margin: auto;
 }
 
+fieldset{
+    /*border: 1px black solid;*/
+    width: 600px;
+    border:3px solid;
+    border-color: #800080;
+    border-radius: 20px;
+    padding: 10%;
+    background: #f8f8f8;
+}
+legend {
+    color: #800080;
+    font-family: 'Lobster', cursive;
+    font-size: 50px;
+    padding: 0px;
+    margin: 0px;
+    width: 230px;
+}
+
 .input {
     border-radius: 6px;
 }
 
 /* by default bootstrap adds a blue glow when form-control is selected */
 /* this changes glow color to purple */
-.form-control:focus {
+.form-control:hover {
   border-color: #8B008B;
   box-shadow: inset 0 1px 1px rgba(128, 0, 128, 0.075), 0 0 8px rgba(128, 0, 128, 0.6);
 }
