--- a/src/blogdevweb/templates/login.html
+++ b/src/blogdevweb/templates/login.html
@@ -19,34 +19,38 @@ and open the template in the editor.
         <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@600&display=swap" rel="stylesheet">
         <!-- Icons library Font Awesome -->
         <script src="https://kit.fontawesome.com/978f116280.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+        <script src="jquery-3.4.1.min.js"></script>
+        <script src="popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <!--Our JS file-->
+        <script src="../static/js/javascript.js"></script>
     </head>
     <body>
         <div class="vertical-center">
             <div class="container col-md-4 col-md-offset-4">
-                <div class="row justify-content-md-center">
-                    <div class="col-8">
-                        <div class="container title">
-                            <div class="row justify-content-md-center">
-                                <h2>Alpha Blog</h2>
-                            </div>
-                        </div><br>
-                        <form class="form">
-                            <div class="form-group row">
-                                <div class="col-sm input-wrapper-legal-id">
-                                    <input type="text" class="form-control form-control-md cpf-mask input" placeholder="CPF" required="required">
-                                </div>
-                            </div><br>
-                            <div class="form-group row">
-                                <div class="col-sm input-wrapper-password">
-                                    <input type="password" class="form-control form-control-md input" placeholder="Senha" required="required">
-                                </div>
-                            </div><br>
-                            <div class="row justify-content-md-center">
-                                <button type="submit" class="btn btn-default">Entrar</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+                <fieldset>
+                        <legend>Alpha Blog</legend>
+                        <div class="row content justify-content-md-center">
+                            <div class="col-8">
+                                <form class="form">
+                                    <div class="form-group row">
+                                        <div class="col-sm input-wrapper-legal-id">
+                                            <input type="text" class="form-control form-control-md cpf-mask input" placeholder="CPF" required="required" id="cpf">
+                                        </div>
+                                    </div><br>
+                                    <div class="form-group row">
+                                        <div class="col-sm input-wrapper-password">
+                                            <input type="password" class="form-control form-control-md input" placeholder="Senha" required="required">
+                                        </div>
+                                    </div><br>
+                                    <div class="row justify-content-md-center">
+                                        <button type="submit" class="btn btn-default">Entrar</button>
+                                    </div>
+                                </form>
+                            </div>  
+                        </div>
+                </fieldset>
             </div>
         </div>
         
