--- a/src/blogdevweb/templates/login.html
+++ b/src/blogdevweb/templates/login.html
@@ -24,7 +24,7 @@ and open the template in the editor.
         <script src="popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <!--Our JS file-->
-        <script src="../static/js/javascript.js"></script>
+        <!--<script src="../static/js/javascript.js"></script>-->
     </head>
     <body>
         <div class="vertical-center">
@@ -38,12 +38,12 @@ and open the template in the editor.
                                         <div class="col-sm input-wrapper-legal-id">
                                             <input type="text" class="form-control form-control-md cpf-mask input" placeholder="CPF" required="required" id="cpf">
                                         </div>
-                                    </div><br>
+                                    </div>
                                     <div class="form-group row">
                                         <div class="col-sm input-wrapper-password">
                                             <input type="password" class="form-control form-control-md input" placeholder="Senha" required="required">
                                         </div>
-                                    </div><br>
+                                    </div>
                                     <div class="row justify-content-md-center">
                                         <button type="submit" class="btn btn-default">Entrar</button>
                                     </div>
@@ -53,33 +53,5 @@ and open the template in the editor.
                 </fieldset>
             </div>
         </div>
-        
-<!--        <div class="modal-dialog modal-login">
-            <div class="modal-content">
-                <div class="modal-header">				
-                    <h4 class="modal-title">Member Login</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            </div>
-                            <div class="modal-body">
-                                    <form action="/examples/actions/confirmation.php" method="post">
-                                            <div class="form-group">
-                                                    <i class="fa fa-user"></i>
-                                                    <input type="text" class="form-control" placeholder="Username" required="required">
-                                            </div>
-                                            <div class="form-group">
-                                                    <i class="fa fa-lock"></i>
-                                                    <input type="password" class="form-control" placeholder="Password" required="required">					
-                                            </div>
-                                            <div class="form-group">
-                                                    <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
-                                            </div>
-                                    </form>
-                            </div>
-                            <div class="modal-footer">
-                                    <a href="#">Forgot Password?</a>
-                            </div>
-                    </div>
-            </div>
-        </div>     -->
     </body>
 </html>
