--- a/src/blogdevweb/templates/list_article.html
+++ b/src/blogdevweb/templates/list_article.html
@@ -42,7 +42,13 @@
 			
 				<div class="card">
 					<div class="card-body">
-						<h4 class="card-title">A origem do Modernismo</h4>
+						<div class="row">
+							<h4 class="col-md-10 card-title">A origem do Modernismo</h4>
+							<div class="col-md-2">
+								<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
+								<button class="button-delete btn btn-danger">Ecluir <i class="fas fa-trash-alt"></i></button>
+							</div>
+						</div>
 						<p class="card-text">
 							<small class="text-muted">
 								<span class="glyphicon glyphicon-user"></span>
@@ -61,11 +67,21 @@
 							O modernismo é uma corrente artística que surgiu na última década do século XIX, como resposta às conseqüências da industrialização, revalorizando a arte e sua forma de realização: manual. O nome deste movimento deve-se à loja que o alemão Samuel Bing abriu em Paris no ano de 1895
 						</div>
 					</div>
+					<div class="card-footer horizontal-align-center">
+						<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
+						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
+					</div>
 				</div>
 				
-								<div class="card">
+				<div class="card">
 					<div class="card-body">
-						<h4 class="card-title">A origem do Modernismo</h4>
+						<div class="row">
+							<h4 class="col-md-10 card-title">A origem do Modernismo</h4>
+							<div class="col-md-2">
+								<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
+								<button class="button-delete btn btn-danger">Ecluir <i class="fas fa-trash-alt"></i></button>
+							</div>
+						</div>
 						<p class="card-text">
 							<small class="text-muted">
 								<span class="glyphicon glyphicon-user"></span>
@@ -83,6 +99,10 @@
 						<div class="card-text article_text">
 							O modernismo é uma corrente artística que surgiu na última década do século XIX, como resposta às conseqüências da industrialização, revalorizando a arte e sua forma de realização: manual. O nome deste movimento deve-se à loja que o alemão Samuel Bing abriu em Paris no ano de 1895
 						</div>
+					</div>
+					<div class="card-footer horizontal-align-center">
+						<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
+						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
 					</div>
 				</div>
 				
