adicionando pagina de listagem de categorias

--- a/src/blogdevweb/templates/list_category.html
+++ b/src/blogdevweb/templates/list_category.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Artigos</title>
+        <title>Categorias</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Bootstrap CSS -->
@@ -37,79 +37,37 @@
 		
 		<div class="container list-container">
 			<div class="list-page-title">
-				<h3>Artigos</h3>
+				<h3>Categorias</h3>
 			</div>
 			
 				<div class="card">
 					<div class="card-body">
 						<div class="row">
-							<h4 class="col-md-10 card-title">A origem do Modernismo</h4>
+							<h4 class="col-md-10 card-title">Artes</h4>
 							<div class="col-md-2">
 								<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
 								<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
 							</div>
 						</div>
-						<p class="card-text">
-							<small class="text-muted">
-								<span class="glyphicon glyphicon-user"></span>
-								Autor: Marcos Reis
-							</small>
-						</p>
-						
-						<p class="card-text">
-							<small class="text-muted">
-								<span class="glyphicon glyphicon-user"></span>
-								Categoria: Artes
-							</small>
-						</p>
-
-						<div class="card-text article_text">
-							O modernismo é uma corrente artística que surgiu na última década do século XIX, como resposta às conseqüências da industrialização, revalorizando a arte e sua forma de realização: manual. O nome deste movimento deve-se à loja que o alemão Samuel Bing abriu em Paris no ano de 1895
-						</div>
-					</div>
-					<div class="card-footer horizontal-align-center">
-						<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
-						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
 					</div>
 				</div>
 				
 				<div class="card">
 					<div class="card-body">
 						<div class="row">
-							<h4 class="col-md-10 card-title">A origem do Modernismo</h4>
+							<h4 class="col-md-10 card-title">Politica</h4>
 							<div class="col-md-2">
 								<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
 								<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
 							</div>
 						</div>
-						<p class="card-text">
-							<small class="text-muted">
-								<span class="glyphicon glyphicon-user"></span>
-								Autor: Marcos Reis
-							</small>
-						</p>
-						
-						<p class="card-text">
-							<small class="text-muted">
-								<span class="glyphicon glyphicon-user"></span>
-								Categoria: Artes
-							</small>
-						</p>
-
-						<div class="card-text article_text">
-							O modernismo é uma corrente artística que surgiu na última década do século XIX, como resposta às conseqüências da industrialização, revalorizando a arte e sua forma de realização: manual. O nome deste movimento deve-se à loja que o alemão Samuel Bing abriu em Paris no ano de 1895
-						</div>
 					</div>
-					<div class="card-footer horizontal-align-center">
-						<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
-						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
-					</div>
-			
 				</div>
+				
 			<div class="horizontal-align-center">
-				<button class="button-approve">Adicionar<i class="fas fa-plus-square"></i></button>
+				<button class="button-approve">Adicionar Categoria<i class="fas fa-plus-square"></i></button>
 			</div>
-				
+			
 		</div>
 	</body>
 </html>
