--- a/src/blogdevweb/static/css/style.css
+++ b/src/blogdevweb/static/css/style.css
@@ -160,7 +160,7 @@ nav{
 }
 
 .button-approve, .button-reprove{
-    padding: initial;
+    padding: 10px;
     border: none;
     border-radius: 6px;
     color: #fafafa;
@@ -168,9 +168,8 @@ nav{
     cursor: pointer;
     transition: .3s;
     margin: 5px;
-    width: 170px;
-    height: 40px;
-
+    width: auto;
+    height: auto;
 }
 
 .button-approve .fas, .button-reprove .fas{
