--- a/src/blogdevweb/templates/add_user.html
+++ b/src/blogdevweb/templates/add_user.html
@@ -58,7 +58,7 @@ and open the template in the editor.
                             </div>
                             <div class="form-group row">
                                 <select name="select" class="form-control form-control-md">
-                                    <option value="" disabled selected>Categoria</option> 
+                                    <option value="" disabled selected>Papel</option> 
                                     <option value="0">Administrador</option> 
                                     <option value="1">Autor</option>
                                     <option value="2">Comentarista</option>
