--- a/src/blogdevweb/templates/list_article.html
+++ b/src/blogdevweb/templates/list_article.html
@@ -46,7 +46,7 @@
 							<h4 class="col-md-10 card-title">A origem do Modernismo</h4>
 							<div class="col-md-2">
 								<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
-								<button class="button-delete btn btn-danger">Ecluir <i class="fas fa-trash-alt"></i></button>
+								<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
 							</div>
 						</div>
 						<p class="card-text">
@@ -105,7 +105,7 @@
 						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
 					</div>
 				</div>
-				
+                    </div>		
 		
 	</body>
 </html>
