--- a/src/blogdevweb/templates/list_users.html
+++ b/src/blogdevweb/templates/list_users.html
@@ -42,12 +42,11 @@ and open the template in the editor.
                 <div class="row content justify-content-md-center">
                     <div class="col-12">
                         <div class="page-title">
-                            <h3>Editar usuário</h3>
+                            <h3>Usuários</h3>
                         </div>
                     </div>
                     <div class="col-8">
-                        <form class="form">
-                            <div class="form-group row">
+                        <div class="card card-user">
                                 <input type="text" class="form-control form-control-md" placeholder="Nome" required="required">
                             </div>
                             <div class="form-group row">
@@ -64,10 +63,16 @@ and open the template in the editor.
                                     <option value="2">Comentarista</option>
                                 </select>
                             </div>
+                            <div class="form-group row">
+                                <input type="password" class="form-control form-control-md input" placeholder="Senha" required="required">
+                            </div>
+                            <div class="form-group row">
+                                <input type="password" class="form-control form-control-md input" placeholder="Confirmação de senha" required="required">
+                            </div>
                             <div class="row justify-content-md-center">
                                 <button type="submit" class="btn btn-default">Salvar</button>
                             </div>
-                        </form>
+                       
                     </div>  
                 </div>
                 
