--- a/src/blogdevweb/templates/list_users.html
+++ b/src/blogdevweb/templates/list_users.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>Usuário</title>
+        <title>Usuários</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+		
         <!-- Our CSS file -->
         <link rel="stylesheet" type="text/css" href="../static/css/style.css">
         <!-- Title font -->
@@ -20,14 +15,16 @@ and open the template in the editor.
         <!-- Icons library Font Awesome -->
         <script src="https://kit.fontawesome.com/978f116280.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-        <script src="jquery-3.4.1.min.js"></script>
-        <script src="popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../static/js/jquery-3.5.1.min.js"></script>
+        <script src="../static/js/bootstrap.min.js"></script>
         <!--Our JS file-->
+		<script src="../static/js/javascript.js"></script>
         <!--<script src="../static/js/javascript.js"></script>-->
     </head>
-    <body>
-        <nav class="navbar navbar-expand-md">
+
+	<body>
+	
+	    <nav class="navbar navbar-expand-md">
             <a class="navbar-brand nav-button nav-home-button" href="#">Alpha Blog</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -37,46 +34,92 @@ and open the template in the editor.
                 </ul>
             </div>
         </nav>
-        <div class="vertical-center">
-            <div class="container col-md-4 col-md-offset-4">
-                <div class="row content justify-content-md-center">
-                    <div class="col-12">
-                        <div class="page-title">
-                            <h3>Usuários</h3>
-                        </div>
-                    </div>
-                    <div class="col-8">
-                        <div class="card card-user">
-                                <input type="text" class="form-control form-control-md" placeholder="Nome" required="required">
-                            </div>
-                            <div class="form-group row">
-                                <input type="email" class="form-control form-control-md" placeholder="E-mail">
-                            </div>
-                            <div class="form-group row">
-                                <input type="text" class="form-control form-control-md" placeholder="CPF">
-                            </div>
-                            <div class="form-group row">
-                                <select name="select" class="form-control form-control-md">
-                                    <option value="" disabled selected>Papel</option> 
-                                    <option value="0">Administrador</option> 
-                                    <option value="1">Autor</option>
-                                    <option value="2">Comentarista</option>
-                                </select>
-                            </div>
-                            <div class="form-group row">
-                                <input type="password" class="form-control form-control-md input" placeholder="Senha" required="required">
-                            </div>
-                            <div class="form-group row">
-                                <input type="password" class="form-control form-control-md input" placeholder="Confirmação de senha" required="required">
-                            </div>
-                            <div class="row justify-content-md-center">
-                                <button type="submit" class="btn btn-default">Salvar</button>
-                            </div>
-                       
-                    </div>  
-                </div>
-                
-            </div>
-        </div>
-    </body>
+		
+		<div class="container list-container">
+			<div class="list-page-title">
+				<h3>Usuários</h3>
+			</div>
+			
+				<div class="card">
+					<div class="card-body">
+						<div class="row">
+							<h4 class="col-md-10 card-title">Gabriela Hecksher</h4>
+							<div class="col-md-2">
+                                                                <a class="btn button-edit btn-warning" href="edit_user.html" role="button">Editar <i class="fas fa-edit"></i></a>
+								<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
+							</div>
+						</div>
+						<p class="card-text">
+							<small class="text-muted">
+								<span class="glyphicon glyphicon-user"></span>
+								E-mail: gabrielahecksher@id.uff.br
+							</small>
+						</p>
+						
+                                                <p class="card-text">
+							<small class="text-muted">
+								<span class="glyphicon glyphicon-user"></span>
+								Papel: Autor
+							</small>
+						</p>
+						
+						<p class="card-text">
+							<small class="text-muted">
+								<span class="glyphicon glyphicon-user"></span>
+								CPF: 133.218.255-98
+							</small>
+						</p>
+
+					</div>
+					<div class="card-footer horizontal-align-center">
+						<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
+						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
+					</div>
+				</div>
+				
+				<div class="card">
+					<div class="card-body">
+						<div class="row">
+							<h4 class="col-md-10 card-title">Marcos Reis</h4>
+							<div class="col-md-2">
+								<a class="btn button-edit btn-warning" href="edit_user.html" role="button">Editar <i class="fas fa-edit"></i></a>
+								<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
+							</div>
+						</div>
+						<p class="card-text">
+							<small class="text-muted">
+								<span class="glyphicon glyphicon-user"></span>
+								E-mail: reismarcos@id.uff.br
+							</small>
+						</p>
+						
+                                                <p class="card-text">
+							<small class="text-muted">
+								<span class="glyphicon glyphicon-user"></span>
+								Papel: Comentarista
+							</small>
+						</p>
+						
+						<p class="card-text">
+							<small class="text-muted">
+								<span class="glyphicon glyphicon-user"></span>
+								CPF: 122.918.255-98
+							</small>
+						</p>
+
+					</div>
+					<div class="card-footer horizontal-align-center">
+						<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
+						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
+					</div>
+			
+				</div>
+			<div class="horizontal-align-center">
+                                <a class="btn btn-primary button-approve" href="add_user.html" role="button">Adicionar<i class="fas fa-plus-square"></i></a>
+			</div>
+				
+		</div>
+                    </div>		
+		
+	</body>
 </html>
