--- a/src/blogdevweb/static/css/style.css
+++ b/src/blogdevweb/static/css/style.css
@@ -152,11 +152,30 @@ nav{
 }
 
 .card-title{
-	color: #800080 !important;
+    color: #800080 !important;
 }
 
 .card{
-	margin-bottom:20px !important;
+    margin-top:20px !important;
+}
+
+.comment-section {
+    font-size: 90%;
+    margin: 0px 40px;
+}
+
+.comment {
+    font-size: 90%;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5px 10px;
+    margin: 10px 0px;
+}
+
+.comment-head {
+    margin: 20px 0px;
+    border-bottom: 2px solid;
+    color: #800080;
 }
 
 .button-approve, .button-reprove{
