--- a/src/blogdevweb/templates/article.html
+++ b/src/blogdevweb/templates/article.html
@@ -89,7 +89,7 @@
                                     </div>
                                 </div>
                                 <div class="horizontal-align-center">
-                                    <button class="button-approve">Adicionar<i class="fas fa-plus-square"></i></button>
+                                    <a class="btn btn-primary button-approve" href="add_comment.html" role="button">Adicionar<i class="fas fa-plus-square"></i></a>
                                 </div>
                             </div>
 			</div>
