adiciona links nos botoes

--- a/src/blogdevweb/templates/add_user.html
+++ b/src/blogdevweb/templates/add_user.html
@@ -28,7 +28,7 @@ and open the template in the editor.
     </head>
     <body>
         <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand nav-button nav-home-button" href="#">Alpha Blog</a>
+            <a class="navbar-brand nav-button nav-home-button" href="list_article.html">Alpha Blog</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -71,7 +71,7 @@ and open the template in the editor.
                                 <input type="password" class="form-control form-control-md input" placeholder="Confirmação de senha" required="required">
                             </div>
                             <div class="row justify-content-md-center">
-                                <button type="submit" class="btn btn-default">Salvar</button>
+                                <a class="btn save-button" href="list_user.html" role="button">Salvar</a>
                             </div>
                         </form>
                     </div>  
