--- a/src/blogdevweb/templates/login.html
+++ b/src/blogdevweb/templates/login.html
@@ -27,6 +27,13 @@ and open the template in the editor.
         <!--<script src="../static/js/javascript.js"></script>-->
     </head>
     <body>
+        <nav class="navbar navbar-expand-md">
+            <a class="navbar-brand nav-button nav-home-button" href="list_article.html">Alpha Blog</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                </ul>
+            </div>
+        </nav>
         <div class="vertical-center">
             <div class="container col-md-4 col-md-offset-4">
                 <fieldset>
