--- a/src/blogdevweb/templates/add_article.html
+++ b/src/blogdevweb/templates/add_article.html
@@ -24,7 +24,7 @@
 	<body>
 	
 	    <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand nav-button nav-home-button" href="#">Alpha Blog</a>
+            <a class="navbar-brand nav-button nav-home-button" href="list_article.html">Alpha Blog</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -42,7 +42,7 @@
                             <h3>Criar/Editar Artigo</h3>
                         </div>
                     </div>
-					<div class="col-1"></div>
+                    <div class="col-1"></div>
                     <div class="col-10">
                         <form class="form">
                             <div class="form-group row">
@@ -57,26 +57,23 @@
                                     <option value="2">Esportes</option>
                                 </select>
                             </div>
-							
-							<div class="form-group row">
+                            <div class="form-group row">
                                 <textarea class="form-control form-control-md" placeholder="Conteudo" required="required" rows="10"	></textarea>
+                            </div>				
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="articleReleaseCheckbox">
+                                <label class="form-check-label" for="articleReleaseCheckbox">
+                                    Liberado para publicação
+                                </label>
                             </div>
-							
-							<div class="form-check">
-							  <input class="form-check-input" type="checkbox" value="" id="articleReleaseCheckbox">
-							  <label class="form-check-label" for="articleReleaseCheckbox">
-								Liberado para publicação
-							  </label>
-							</div>
 
                             <div class="horizontal-align-center">
-                                <button type="submit" class="btn btn-default">Salvar</button>
+                                <a class="btn save-button" href="list_article.html" role="button">Salvar</a>
                             </div>
                         </form>
                     </div> 
-					<div class="col-1"></div>					
+                    <div class="col-1"></div>					
                 </div>
-                
             </div>
         </div>
 		
