--- a/src/blogdevweb/templates/add_category.html
+++ b/src/blogdevweb/templates/add_category.html
@@ -24,7 +24,7 @@
 	<body>
 	
 	    <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand nav-button nav-home-button" href="#">Alpha Blog</a>
+            <a class="navbar-brand nav-button nav-home-button" href="list_article.html">Alpha Blog</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -50,7 +50,7 @@
                             </div>
 
                             <div class="horizontal-align-center">
-                                <button type="submit" class="btn btn-default">Salvar</button>
+                                <a class="btn save-button" href="list_category.html" role="button">Salvar</a>
                             </div>
                         </form>
                     </div> 
