--- a/src/blogdevweb/templates/article.html
+++ b/src/blogdevweb/templates/article.html
@@ -25,7 +25,7 @@
 	<body>
 	
 	    <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand nav-button nav-home-button" href="#">Alpha Blog</a>
+            <a class="navbar-brand nav-button nav-home-button" href=list_article.html#">Alpha Blog</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
