--- a/src/blogdevweb/templates/list_category.html
+++ b/src/blogdevweb/templates/list_category.html
@@ -25,7 +25,7 @@
 	<body>
 	
 	    <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand nav-button nav-home-button" href="#">Alpha Blog</a>
+            <a class="navbar-brand nav-button nav-home-button" href="list_article.html">Alpha Blog</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -65,7 +65,7 @@
 				</div>
 				
 			<div class="horizontal-align-center">
-				<button class="button-approve">Adicionar Categoria<i class="fas fa-plus-square"></i></button>
+                            <a class="btn btn-primary button-approve" href="add_category.html" role="button">Adicionar<i class="fas fa-plus-square"></i></a>
 			</div>
 			
 		</div>
