--- a/src/blogdevweb/templates/list_user.html
+++ b/src/blogdevweb/templates/list_user.html
@@ -24,16 +24,16 @@
 
 	<body>
 	
-	    <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand nav-button nav-home-button" href="#">Alpha Blog</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link nav-profile-button" href="#"></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+            <nav class="navbar navbar-expand-md">
+                <a class="navbar-brand nav-button nav-home-button" href="list_article.html">Alpha Blog</a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                          <a class="nav-link nav-profile-button" href="#"></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 		
 		<div class="container list-container">
 			<div class="list-page-title">
