--- a/src/blogdevweb/templates/list_article.html
+++ b/src/blogdevweb/templates/list_article.html
@@ -23,93 +23,124 @@
     </head>
 
 	<body>
-	
-	    <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand nav-button nav-home-button" href="list_article.html">Alpha Blog</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link nav-profile-button" href="#"></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+            <nav class="navbar navbar-expand-md">
+                <a class="navbar-brand nav-button nav-home-button nav-item" href="list_article.html">Alpha Blog</a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Artigos
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="list_article.html">Artigos publicados</a>
+                                <a class="dropdown-item" href="list_article.html">Artigos pendentes</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="add_article.html">Criar artigo</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Categorias
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Artes</a>
+                                <a class="dropdown-item" href="#">Política</a>
+                                <a class="dropdown-item" href="#">Ficção</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="add_category.html">Criar categoria</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Usuários
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="list_user.html">Usuários pendentes</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="add_user.html">Criar usuário</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a class="nav-link nav-profile-button" href="login.html">Login <i class="fas fa-user"></i></a></li>
+                    </ul>
+                </div>
+            </nav>
 		
-		<div class="container list-container">
-			<div class="list-page-title">
-				<h3>Artigos</h3>
+            <div class="container list-container">
+		<div class="list-page-title">
+                    <h3>Artigos</h3>
+		</div>		
+		<div class="card">
+                    <div class="card-body">
+			<div class="row">
+                            <h4 class="col-md-10 card-title"><a href="article.html">A origem do Modernismo</a></h4>
+                            <div class="col-md-2">
+				<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
+				<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
+                            </div>
 			</div>
-			
-				<div class="card">
-					<div class="card-body">
-						<div class="row">
-							<h4 class="col-md-10 card-title">A origem do Modernismo</h4>
-							<div class="col-md-2">
-								<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
-								<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
-							</div>
-						</div>
-						<p class="card-text">
-							<small class="text-muted">
-								<span class="glyphicon glyphicon-user"></span>
-								Autor: Marcos Reis
-							</small>
-						</p>
+			<p class="card-text">
+                            <small class="text-muted">
+				<span class="glyphicon glyphicon-user"></span>
+                                Autor: Marcos Reis
+                            </small>
+			</p>
 						
-						<p class="card-text">
-							<small class="text-muted">
-								<span class="glyphicon glyphicon-user"></span>
-								Categoria: Artes
-							</small>
-						</p>
+			<p class="card-text">
+                            <small class="text-muted">
+				<span class="glyphicon glyphicon-user"></span>
+				Categoria: Artes
+                            </small>
+			</p>
 
-						<div class="card-text article_text">
-							O modernismo é uma corrente artística que surgiu na última década do século XIX, como resposta às conseqüências da industrialização, revalorizando a arte e sua forma de realização: manual. O nome deste movimento deve-se à loja que o alemão Samuel Bing abriu em Paris no ano de 1895
-						</div>
-					</div>
-					<div class="card-footer horizontal-align-center">
-						<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
-						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
-					</div>
-				</div>
-				
-				<div class="card">
-					<div class="card-body">
-						<div class="row">
-							<h4 class="col-md-10 card-title">A origem do Modernismo</h4>
-							<div class="col-md-2">
-								<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
-								<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
-							</div>
-						</div>
-						<p class="card-text">
-							<small class="text-muted">
-								<span class="glyphicon glyphicon-user"></span>
-								Autor: Marcos Reis
-							</small>
-						</p>
-						
-						<p class="card-text">
-							<small class="text-muted">
-								<span class="glyphicon glyphicon-user"></span>
-								Categoria: Artes
-							</small>
-						</p>
-
-						<div class="card-text article_text">
-							O modernismo é uma corrente artística que surgiu na última década do século XIX, como resposta às conseqüências da industrialização, revalorizando a arte e sua forma de realização: manual. O nome deste movimento deve-se à loja que o alemão Samuel Bing abriu em Paris no ano de 1895
-						</div>
-					</div>
-					<div class="card-footer horizontal-align-center">
-						<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
-						<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
-					</div>
-			
-				</div>
-			<div class="horizontal-align-center">
-                            <a class="btn btn-primary button-approve" href="add_article.html" role="button">Adicionar<i class="fas fa-plus-square"></i></a>
+			<div class="card-text article_text">
+                            O modernismo é uma corrente artística que surgiu na última década do século XIX, como resposta às conseqüências da industrialização, revalorizando a arte e sua forma de realização: manual. O nome deste movimento deve-se à loja que o alemão Samuel Bing abriu em Paris no ano de 1895
 			</div>
-				
+                    </div>
+                    <div class="card-footer horizontal-align-center">
+			<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
+			<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
+                    </div>
 		</div>
+				
+		<div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <h4 class="col-md-10 card-title"><a href="article.html">A origem do Modernismo</a></h4>
+                            <div class="col-md-2">
+				<button class="button-edit btn btn-warning">Editar <i class="fas fa-edit"></i></button>
+				<button class="button-delete btn btn-danger">Excluir <i class="fas fa-trash-alt"></i></button>
+                            </div>
+			</div>
+			<p class="card-text">
+                            <small class="text-muted">
+				<span class="glyphicon glyphicon-user"></span>
+				Autor: Marcos Reis
+                            </small>
+			</p>
+						
+			<p class="card-text">
+                            <small class="text-muted">
+				<span class="glyphicon glyphicon-user"></span>
+				Categoria: Artes
+                            </small>
+			</p>
+
+			<div class="card-text article_text">
+                            O modernismo é uma corrente artística que surgiu na última década do século XIX, como resposta às conseqüências da industrialização, revalorizando a arte e sua forma de realização: manual. O nome deste movimento deve-se à loja que o alemão Samuel Bing abriu em Paris no ano de 1895
+			</div>
+                    </div>
+                    <div class="card-footer horizontal-align-center">
+			<button class="button-approve">Aprovar<i class="fas fa-thumbs-up"></i></button>
+			<button class="button-reprove">Reprovar<i class="fas fa-thumbs-down"></i></button>
+                    </div>
+			
+                </div>
+		<div class="horizontal-align-center">
+                    <a class="btn btn-primary button-approve" href="add_article.html" role="button">Adicionar<i class="fas fa-plus-square"></i></a>
+		</div>
+				
+            </div>
 	</body>
 </html>
