adiciona icon botao navbar responsiva

--- a/src/blogdevweb/templates/article.html
+++ b/src/blogdevweb/templates/article.html
@@ -27,7 +27,7 @@
 	    <nav class="navbar navbar-expand-lg">
 		<a class="navbar-brand nav-button nav-home-button nav-item" href="list_article.html">Alpha Blog</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
 		</button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav mr-auto">
