--- a/src/blogdevweb/static/css/style.css
+++ b/src/blogdevweb/static/css/style.css
@@ -100,6 +100,11 @@ button:hover, .save-button:hover, .btn:hover {
     transition: .2s;
 }
 
+.navbar-toggler{
+    border: solid 1px;
+    border-color: #fafafa;
+}
+
 /* Navbar style */
 nav{
     background-color: #800080 !important;
